--- a/fenxi1.ipynb
+++ b/fenxi1.ipynb
@@ -14,8 +14,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(0.707107, 1.224745, -6.928204)\n",
-    "(-0.61548, 0.785398, 0)\n",
+    "(0, -0, -12.369316)\n",
+    "(-0.941517, 1.292497, 0)\n",
+    "(-53.944969, 74.054604, 0)\n",
     "### camke  , C++ ,openmp."
    ]
   },
@@ -27,8 +28,8 @@
     {
      "data": {
       "text/plain": [
-       "(array([ 0.707107,  1.224745, -6.928204]),\n",
-       " array([-0.61548 ,  0.785398,  0.      ]))"
+       "(array([  0.      ,   0.      , -12.369316]),\n",
+       " array([-0.941517,  1.292497,  0.      ]))"
       ]
      },
      "execution_count": 2,
@@ -37,62 +38,79 @@
     }
    ],
    "source": [
-    "P = np.array((0.707107, 1.224745, -6.928204))\n",
-    "R = np.array((-0.61548, 0.785398, 0))\n",
+    "P = np.array((0, -0, -12.369316))\n",
+    "R = np.array((-0.941517, 1.292497, 0))\n",
     "P,R"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "R_X=np.array( [  [1,0,0],\n",
+    "                [0,np.cos(R[0]),-np.sin(R[0])],\n",
+    "                [0,np.sin(R[0]),np.cos(R[0])]]) \n",
+    "R_Y=np.array(   [[np.cos(R[1]),0,np.sin(R[1])],\n",
+    "                [0,1,0],\n",
+    "                [-np.sin(R[1]),0,np.cos(R[1])]] )\n",
+    "R_Z=np.array(  [ [np.cos(R[2]),np.sin(R[2]),0],\n",
+    "                [np.sin(R[2]),np.cos(R[2]),0],\n",
+    "                [0,0,1] ])\n",
+    "R_A=R_Z@R_Y@R_X\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.71633128 -0.22229802  0.66140236]\n",
-      " [-0.22229802  0.82579535  0.51831037]\n",
-      " [-0.66140236 -0.51831037  0.54212663]]\n",
-      "!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n"
+      "[[ 1.          0.          0.        ]\n",
+      " [ 0.          0.58856228  0.80845188]\n",
+      " [ 0.         -0.80845188  0.58856228]]\n",
+      "[[ 0.27472081  0.          0.96152404]\n",
+      " [ 0.          1.          0.        ]\n",
+      " [-0.96152404  0.          0.27472081]]\n",
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "[[ 0.27472081 -0.77734592  0.56591678]\n",
+      " [ 0.          0.58856228  0.80845188]\n",
+      " [-0.96152404 -0.22209855  0.16169031]]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([-4.34806601, -2.73675972, -4.85844415])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "D = cv.Rodrigues(R)\n",
-    "print(D[0])\n",
-    "print(\"!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\")\n",
-    "D[0]@P\n"
+    "print(R_X)\n",
+    "print(R_Y)\n",
+    "print(R_Z)\n",
+    "print(R_A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-4.34806601, -2.73675972, -4.85844415])"
+       "array([-7.0000035 , -9.99999677, -1.99999849])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "D[0]@P"
+    "R_A@P"
    ]
   }
  ],
