--- a/fenxi1.ipynb
+++ b/fenxi1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,38 +14,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(0, -0, -12.369316)\n",
-    "(-0.941517, 1.292497, 0)\n",
-    "(-53.944969, 74.054604, 0)\n",
+    "(0.707107, 1.224745, -6.928204)\n",
+    "(-0.61548, 0.785398, 0)\n",
+    "(-35.264389, 45, 0)\n",
+    "\n",
     "### camke  , C++ ,openmp."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([  0.      ,   0.      , -12.369316]),\n",
-       " array([-0.941517,  1.292497,  0.      ]))"
+       "(array([ 0.707107,  1.224745, -6.928204]),\n",
+       " array([-0.61548 ,  0.785398,  0.      ]))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "P = np.array((0, -0, -12.369316))\n",
-    "R = np.array((-0.941517, 1.292497, 0))\n",
+    "P = np.array((0.707107, 1.224745, -6.928204))\n",
+    "R = np.array((-0.61548, 0.785398, 0))\n",
     "P,R"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -72,17 +73,17 @@
      "output_type": "stream",
      "text": [
       "[[ 1.          0.          0.        ]\n",
-      " [ 0.          0.58856228  0.80845188]\n",
-      " [ 0.         -0.80845188  0.58856228]]\n",
-      "[[ 0.27472081  0.          0.96152404]\n",
+      " [ 0.          0.81649641  0.57735051]\n",
+      " [ 0.         -0.57735051  0.81649641]]\n",
+      "[[ 0.7071069   0.          0.70710667]\n",
       " [ 0.          1.          0.        ]\n",
-      " [-0.96152404  0.          0.27472081]]\n",
+      " [-0.70710667  0.          0.7071069 ]]\n",
       "[[1. 0. 0.]\n",
       " [0. 1. 0.]\n",
       " [0. 0. 1.]]\n",
-      "[[ 0.27472081 -0.77734592  0.56591678]\n",
-      " [ 0.          0.58856228  0.80845188]\n",
-      " [-0.96152404 -0.22209855  0.16169031]]\n"
+      "[[ 0.7071069  -0.40824839  0.57735006]\n",
+      " [ 0.          0.81649641  0.57735051]\n",
+      " [-0.70710667 -0.40824853  0.57735024]]\n"
      ]
     }
    ],
@@ -95,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-7.0000035 , -9.99999677, -1.99999849])"
+       "array([-3.99999891, -3.00000219, -5.00000069])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
